multi repository pre-beta ready
fix relative path issue
