# community/community-server/api/controllers/repository.js
@@ -1,4 +1,8 @@
 const settings = require("../../../../indexer/Settings");
+const swaggerJson = require("../../swagger/swagger.json");
+const fs = require("fs");
+const path = require('path');
+
 module.exports = {
 
 
@@ -15,49 +19,73 @@ module.exports = {
   },
 
 
-  exits: {},
+  exits: {
+    notFound: {
+      description: 'No user with the specified ID was found in the database.',
+      responseType: 'notFound'
+    }
+  },
 
 
   fn: async function (inputs, exits) {
-    let out = {}
-    const path = require("path");
-    const PresetsFolder = require('../../../../indexer/PresetsFolder');
-    const settings = require('../../../../indexer/Settings');
-    const IndexContent = require('../../../../indexer/IndexContent');
-    const crypto = require('crypto');
-    const errors = [];
-    process.exitCode = 100;
+    var req = this.req;
+    var res = this.res;
 
-    let writeIndexFile = false;
+    console.log(req.param('name'));
+    var repoName = req.param('name');
+    var file = req.param('0');
 
-    let presetFilesArray = [];
-    let presetsFolder = new PresetsFolder(path.resolve("../../" + settings.presetsDir), settings, presetFilesArray, errors);
-    PresetsFolder.checkForIncludeLoops(presetFilesArray, errors);
-    //console.log(presetFilesArray)
+    if (file && repoName)
+    {
+      try {
+        const fileContent = fs.readFileSync(path.resolve('../../presets/' + repoName + "/" + file));
+        return exits.success(fileContent);
+      }
+      catch(ex)
+      {
+        return exits.success("no file found");
+      }
+    }
+    else {
+
+      let out = {}
+      const PresetsFolder = require('../../../../indexer/PresetsFolder');
+      const settings = require('../../../../indexer/Settings');
+      const IndexContent = require('../../../../indexer/IndexContent');
+      const crypto = require('crypto');
+      const errors = [];
+      process.exitCode = 100;
+      let writeIndexFile = false;
+
+      let presetFilesArray = [];
+      let presetsFolder = new PresetsFolder(settings.presetsDir, settings, presetFilesArray, errors);
+      PresetsFolder.checkForIncludeLoops(presetFilesArray, errors);
+      //console.log(presetFilesArray)
 
 //console.log(getUniqueValues(presetFilesArray, "firmwareVersion"));
 
-    if (0 === errors.length) {
-      console.log("OK");
+      if (0 === errors.length) {
+        console.log("OK");
 
-      const indexContent = new IndexContent(presetFilesArray, settings);
-      const jsonIndexContent = JSON.stringify(indexContent, null, 2);
+        const indexContent = new IndexContent(presetFilesArray, settings);
+        const jsonIndexContent = JSON.stringify(indexContent, null, 2);
 
-      console.log("index.json created");
+        console.log("index.json created");
 
-      const sum = crypto.createHash('sha256');
-      sum.update(jsonIndexContent);
-      const indexHash = sum.digest('hex');
+        const sum = crypto.createHash('sha256');
+        sum.update(jsonIndexContent);
+        const indexHash = sum.digest('hex');
 
-      console.log("index_hash.txt created");
+        console.log("index_hash.txt created");
 
-      out.jsonIndexContent = indexContent;
-      out.indexHash = indexHash;
-      out.exitCode = 0;
+        out.jsonIndexContent = indexContent;
+        out.indexHash = indexHash;
+        out.exitCode = 0;
 
-      return exits.success(out);
+        return exits.success(out);
 
-    } else return exits.error("error")
+      } else return exits.error("error")
+    }
 
 
   }
